tests/snapshots/gateway/studio/docs_retrieval_endpoint_modelica_json.snap
---
source: packages/rust/crates/xiuxian-wendao/src/gateway/studio/test_support.rs
expression: value
---
{
  "hits": [
    {
      "kind": "page",
      "node": null,
      "page": {
        "doc_id": "repo:modelica-gateway-retrieval:doc:Controllers/UsersGuide/Tutorial/FirstSteps.mo",
        "doc_ids": [
          "repo:modelica-gateway-retrieval:doc:Controllers/UsersGuide/Tutorial/FirstSteps.mo",
          "repo:modelica-gateway-retrieval:doc:Controllers/UsersGuide/Tutorial/FirstSteps.mo#annotation.documentation",
          "repo:modelica-gateway-retrieval:doc:Controllers/UsersGuide/package.mo",
          "repo:modelica-gateway-retrieval:doc:Controllers/PI.mo#annotation.documentation"
        ],
        "example_ids": [
          "repo:modelica-gateway-retrieval:example:Controllers/Examples/Step.mo"
        ],
        "format_hints": [
          "modelica_annotation",
          "modelica_users_guide_page",
          "modelica_users_guide_tutorial",
          "modelica_users_guide_tutorial_annotation"
        ],
        "keywords": [
          "Controllers/Examples/Step.mo",
          "Projectionica.Controllers",
          "modelica_annotation",
          "modelica_users_guide_page",
          "modelica_users_guide_tutorial",
          "modelica_users_guide_tutorial_annotation",
          "repo:modelica-gateway-retrieval:doc:Controllers/UsersGuide/Tutorial/FirstSteps.mo"
        ],
        "kind": "reference",
        "module_ids": [
          "repo:modelica-gateway-retrieval:module:Projectionica.Controllers"
        ],
        "page_id": "repo:modelica-gateway-retrieval:projection:reference:module:repo:modelica-gateway-retrieval:module:Projectionica.Controllers",
        "path": "Controllers/Examples/Step.mo",
        "paths": [
          "Controllers/Examples/Step.mo",
          "Controllers/PI.mo#annotation.documentation",
          "Controllers/UsersGuide/Tutorial/FirstSteps.mo",
          "Controllers/UsersGuide/Tutorial/FirstSteps.mo#annotation.documentation",
          "Controllers/UsersGuide/package.mo",
          "Controllers/package.mo"
        ],
        "repo_id": "modelica-gateway-retrieval",
        "sections": [
          {
            "body": "Projected reference page for `Projectionica.Controllers`.\nFormat hints:\n- `modelica_annotation`\n- `modelica_users_guide_page`\n- `modelica_users_guide_tutorial`\n- `modelica_users_guide_tutorial_annotation`\nSource paths:\n- `Controllers/Examples/Step.mo`\n- `Controllers/PI.mo#annotation.documentation`\n- `Controllers/UsersGuide/Tutorial/FirstSteps.mo`\n- `Controllers/UsersGuide/Tutorial/FirstSteps.mo#annotation.documentation`\n- `Controllers/UsersGuide/package.mo`\n- `Controllers/package.mo`",
            "level": 1,
            "paths": [
              "Controllers/Examples/Step.mo",
              "Controllers/PI.mo#annotation.documentation",
              "Controllers/UsersGuide/Tutorial/FirstSteps.mo",
              "Controllers/UsersGuide/Tutorial/FirstSteps.mo#annotation.documentation",
              "Controllers/UsersGuide/package.mo",
              "Controllers/package.mo"
            ],
            "section_id": "repo:modelica-gateway-retrieval:projection:reference:module:repo:modelica-gateway-retrieval:module:Projectionica.Controllers#overview",
            "title": "Overview"
          },
          {
            "body": "Modules:\n- `Projectionica.Controllers` (Controllers/package.mo)",
            "level": 2,
            "paths": [
              "Controllers/package.mo"
            ],
            "section_id": "repo:modelica-gateway-retrieval:projection:reference:module:repo:modelica-gateway-retrieval:module:Projectionica.Controllers#anchors",
            "title": "Anchors"
          },
          {
            "body": "Documentation:\n- `FirstSteps` (Controllers/UsersGuide/Tutorial/FirstSteps.mo)\n- `FirstSteps documentation` (Controllers/UsersGuide/Tutorial/FirstSteps.mo#annotation.documentation)\n- `PI documentation` (Controllers/PI.mo#annotation.documentation)\n- `UsersGuide` (Controllers/UsersGuide/package.mo)",
            "level": 2,
            "paths": [
              "Controllers/UsersGuide/Tutorial/FirstSteps.mo",
              "Controllers/UsersGuide/Tutorial/FirstSteps.mo#annotation.documentation",
              "Controllers/PI.mo#annotation.documentation",
              "Controllers/UsersGuide/package.mo"
            ],
            "section_id": "repo:modelica-gateway-retrieval:projection:reference:module:repo:modelica-gateway-retrieval:module:Projectionica.Controllers#sources",
            "title": "Documentation"
          },
          {
            "body": "Examples:\n- `Step` (Controllers/Examples/Step.mo)",
            "level": 2,
            "paths": [
              "Controllers/Examples/Step.mo"
            ],
            "section_id": "repo:modelica-gateway-retrieval:projection:reference:module:repo:modelica-gateway-retrieval:module:Projectionica.Controllers#examples",
            "title": "Examples"
          }
        ],
        "symbol_ids": [],
        "title": "Projectionica.Controllers"
      }
    },
    {
      "kind": "page_index_node",
      "node": {
        "doc_id": "reference/projectionica-controllers-17f0484e52d1",
        "line_range": [
          1,
          7
        ],
        "node_id": "reference/projectionica-controllers-17f0484e52d1#projectionica-controllers",
        "node_title": "Projectionica.Controllers",
        "page_id": "repo:modelica-gateway-retrieval:projection:reference:module:repo:modelica-gateway-retrieval:module:Projectionica.Controllers",
        "page_kind": "reference",
        "page_title": "Projectionica.Controllers",
        "path": "reference/projectionica-controllers-17f0484e52d1.md",
        "repo_id": "modelica-gateway-retrieval",
        "structural_path": [
          "Projectionica.Controllers"
        ],
        "text": ":PROPERTIES:\n:TYPE: PROJECTED_PAGE\n:KIND: reference\n:FORMATS: modelica_annotation, modelica_users_guide_page, modelica_users_guide_tutorial, modelica_users_guide_tutorial_annotation\n:END:"
      },
      "page": {
        "doc_id": "repo:modelica-gateway-retrieval:doc:Controllers/UsersGuide/Tutorial/FirstSteps.mo",
        "doc_ids": [
          "repo:modelica-gateway-retrieval:doc:Controllers/UsersGuide/Tutorial/FirstSteps.mo",
          "repo:modelica-gateway-retrieval:doc:Controllers/UsersGuide/Tutorial/FirstSteps.mo#annotation.documentation",
          "repo:modelica-gateway-retrieval:doc:Controllers/UsersGuide/package.mo",
          "repo:modelica-gateway-retrieval:doc:Controllers/PI.mo#annotation.documentation"
        ],
        "example_ids": [
          "repo:modelica-gateway-retrieval:example:Controllers/Examples/Step.mo"
        ],
        "format_hints": [
          "modelica_annotation",
          "modelica_users_guide_page",
          "modelica_users_guide_tutorial",
          "modelica_users_guide_tutorial_annotation"
        ],
        "keywords": [
          "Controllers/Examples/Step.mo",
          "Projectionica.Controllers",
          "modelica_annotation",
          "modelica_users_guide_page",
          "modelica_users_guide_tutorial",
          "modelica_users_guide_tutorial_annotation",
          "repo:modelica-gateway-retrieval:doc:Controllers/UsersGuide/Tutorial/FirstSteps.mo"
        ],
        "kind": "reference",
        "module_ids": [
          "repo:modelica-gateway-retrieval:module:Projectionica.Controllers"
        ],
        "page_id": "repo:modelica-gateway-retrieval:projection:reference:module:repo:modelica-gateway-retrieval:module:Projectionica.Controllers",
        "path": "Controllers/Examples/Step.mo",
        "paths": [
          "Controllers/Examples/Step.mo",
          "Controllers/PI.mo#annotation.documentation",
          "Controllers/UsersGuide/Tutorial/FirstSteps.mo",
          "Controllers/UsersGuide/Tutorial/FirstSteps.mo#annotation.documentation",
          "Controllers/UsersGuide/package.mo",
          "Controllers/package.mo"
        ],
        "repo_id": "modelica-gateway-retrieval",
        "sections": [
          {
            "body": "Projected reference page for `Projectionica.Controllers`.\nFormat hints:\n- `modelica_annotation`\n- `modelica_users_guide_page`\n- `modelica_users_guide_tutorial`\n- `modelica_users_guide_tutorial_annotation`\nSource paths:\n- `Controllers/Examples/Step.mo`\n- `Controllers/PI.mo#annotation.documentation`\n- `Controllers/UsersGuide/Tutorial/FirstSteps.mo`\n- `Controllers/UsersGuide/Tutorial/FirstSteps.mo#annotation.documentation`\n- `Controllers/UsersGuide/package.mo`\n- `Controllers/package.mo`",
            "level": 1,
            "paths": [
              "Controllers/Examples/Step.mo",
              "Controllers/PI.mo#annotation.documentation",
              "Controllers/UsersGuide/Tutorial/FirstSteps.mo",
              "Controllers/UsersGuide/Tutorial/FirstSteps.mo#annotation.documentation",
              "Controllers/UsersGuide/package.mo",
              "Controllers/package.mo"
            ],
            "section_id": "repo:modelica-gateway-retrieval:projection:reference:module:repo:modelica-gateway-retrieval:module:Projectionica.Controllers#overview",
            "title": "Overview"
          },
          {
            "body": "Modules:\n- `Projectionica.Controllers` (Controllers/package.mo)",
            "level": 2,
            "paths": [
              "Controllers/package.mo"
            ],
            "section_id": "repo:modelica-gateway-retrieval:projection:reference:module:repo:modelica-gateway-retrieval:module:Projectionica.Controllers#anchors",
            "title": "Anchors"
          },
          {
            "body": "Documentation:\n- `FirstSteps` (Controllers/UsersGuide/Tutorial/FirstSteps.mo)\n- `FirstSteps documentation` (Controllers/UsersGuide/Tutorial/FirstSteps.mo#annotation.documentation)\n- `PI documentation` (Controllers/PI.mo#annotation.documentation)\n- `UsersGuide` (Controllers/UsersGuide/package.mo)",
            "level": 2,
            "paths": [
              "Controllers/UsersGuide/Tutorial/FirstSteps.mo",
              "Controllers/UsersGuide/Tutorial/FirstSteps.mo#annotation.documentation",
              "Controllers/PI.mo#annotation.documentation",
              "Controllers/UsersGuide/package.mo"
            ],
            "section_id": "repo:modelica-gateway-retrieval:projection:reference:module:repo:modelica-gateway-retrieval:module:Projectionica.Controllers#sources",
            "title": "Documentation"
          },
          {
            "body": "Examples:\n- `Step` (Controllers/Examples/Step.mo)",
            "level": 2,
            "paths": [
              "Controllers/Examples/Step.mo"
            ],
            "section_id": "repo:modelica-gateway-retrieval:projection:reference:module:repo:modelica-gateway-retrieval:module:Projectionica.Controllers#examples",
            "title": "Examples"
          }
        ],
        "symbol_ids": [],
        "title": "Projectionica.Controllers"
      }
    },
    {
      "kind": "page_index_node",
      "node": {
        "doc_id": "reference/projectionica-controllers-pi-819bd8c5eb32",
        "line_range": [
          1,
          7
        ],
        "node_id": "reference/projectionica-controllers-pi-819bd8c5eb32#projectionica-controllers-pi",
        "node_title": "Projectionica.Controllers.PI",
        "page_id": "repo:modelica-gateway-retrieval:projection:reference:symbol:repo:modelica-gateway-retrieval:symbol:Projectionica.Controllers.PI",
        "page_kind": "reference",
        "page_title": "Projectionica.Controllers.PI",
        "path": "reference/projectionica-controllers-pi-819bd8c5eb32.md",
        "repo_id": "modelica-gateway-retrieval",
        "structural_path": [
          "Projectionica.Controllers.PI"
        ],
        "text": ":PROPERTIES:\n:TYPE: PROJECTED_PAGE\n:KIND: reference\n:FORMATS: modelica_annotation\n:END:"
      },
      "page": {
        "doc_id": "repo:modelica-gateway-retrieval:doc:Controllers/PI.mo#annotation.documentation",
        "doc_ids": [
          "repo:modelica-gateway-retrieval:doc:Controllers/PI.mo#annotation.documentation"
        ],
        "example_ids": [],
        "format_hints": [
          "modelica_annotation"
        ],
        "keywords": [
          "Controllers/PI.mo",
          "Projectionica.Controllers.PI",
          "modelica_annotation",
          "repo:modelica-gateway-retrieval:doc:Controllers/PI.mo#annotation.documentation"
        ],
        "kind": "reference",
        "module_ids": [
          "repo:modelica-gateway-retrieval:module:Projectionica.Controllers"
        ],
        "page_id": "repo:modelica-gateway-retrieval:projection:reference:symbol:repo:modelica-gateway-retrieval:symbol:Projectionica.Controllers.PI",
        "path": "Controllers/PI.mo",
        "paths": [
          "Controllers/PI.mo",
          "Controllers/PI.mo#annotation.documentation"
        ],
        "repo_id": "modelica-gateway-retrieval",
        "sections": [
          {
            "body": "Projected reference page for `Projectionica.Controllers.PI`.\nFormat hints:\n- `modelica_annotation`\nSource paths:\n- `Controllers/PI.mo`\n- `Controllers/PI.mo#annotation.documentation`",
            "level": 1,
            "paths": [
              "Controllers/PI.mo",
              "Controllers/PI.mo#annotation.documentation"
            ],
            "section_id": "repo:modelica-gateway-retrieval:projection:reference:symbol:repo:modelica-gateway-retrieval:symbol:Projectionica.Controllers.PI#overview",
            "title": "Overview"
          },
          {
            "body": "Modules:\n- `Projectionica.Controllers` (Controllers/package.mo)\n\nSymbols:\n- `Projectionica.Controllers.PI` (Controllers/PI.mo)",
            "level": 2,
            "paths": [
              "Controllers/PI.mo",
              "Controllers/package.mo"
            ],
            "section_id": "repo:modelica-gateway-retrieval:projection:reference:symbol:repo:modelica-gateway-retrieval:symbol:Projectionica.Controllers.PI#anchors",
            "title": "Anchors"
          },
          {
            "body": "Documentation:\n- `PI documentation` (Controllers/PI.mo#annotation.documentation)",
            "level": 2,
            "paths": [
              "Controllers/PI.mo#annotation.documentation"
            ],
            "section_id": "repo:modelica-gateway-retrieval:projection:reference:symbol:repo:modelica-gateway-retrieval:symbol:Projectionica.Controllers.PI#sources",
            "title": "Documentation"
          }
        ],
        "symbol_ids": [
          "repo:modelica-gateway-retrieval:symbol:Projectionica.Controllers.PI"
        ],
        "title": "Projectionica.Controllers.PI"
      }
    },
    {
      "kind": "page_index_node",
      "node": {
        "doc_id": "reference/projectionica-controllers-usersguide-fe2a1338a9f7",
        "line_range": [
          1,
          7
        ],
        "node_id": "reference/projectionica-controllers-usersguide-fe2a1338a9f7#projectionica-controllers-usersguide",
        "node_title": "Projectionica.Controllers.UsersGuide",
        "page_id": "repo:modelica-gateway-retrieval:projection:reference:module:repo:modelica-gateway-retrieval:module:Projectionica.Controllers.UsersGuide",
        "page_kind": "reference",
        "page_title": "Projectionica.Controllers.UsersGuide",
        "path": "reference/projectionica-controllers-usersguide-fe2a1338a9f7.md",
        "repo_id": "modelica-gateway-retrieval",
        "structural_path": [
          "Projectionica.Controllers.UsersGuide"
        ],
        "text": ":PROPERTIES:\n:TYPE: PROJECTED_PAGE\n:KIND: reference\n:FORMATS: modelica_users_guide_page, modelica_users_guide_tutorial, modelica_users_guide_tutorial_annotation\n:END:"
      },
      "page": {
        "doc_id": "repo:modelica-gateway-retrieval:doc:Controllers/UsersGuide/Tutorial/FirstSteps.mo",
        "doc_ids": [
          "repo:modelica-gateway-retrieval:doc:Controllers/UsersGuide/Tutorial/FirstSteps.mo",
          "repo:modelica-gateway-retrieval:doc:Controllers/UsersGuide/Tutorial/FirstSteps.mo#annotation.documentation",
          "repo:modelica-gateway-retrieval:doc:Controllers/UsersGuide/package.mo"
        ],
        "example_ids": [],
        "format_hints": [
          "modelica_users_guide_page",
          "modelica_users_guide_tutorial",
          "modelica_users_guide_tutorial_annotation"
        ],
        "keywords": [
          "Controllers/UsersGuide/Tutorial/FirstSteps.mo",
          "Projectionica.Controllers.UsersGuide",
          "modelica_users_guide_page",
          "modelica_users_guide_tutorial",
          "modelica_users_guide_tutorial_annotation",
          "repo:modelica-gateway-retrieval:doc:Controllers/UsersGuide/Tutorial/FirstSteps.mo"
        ],
        "kind": "reference",
        "module_ids": [
          "repo:modelica-gateway-retrieval:module:Projectionica.Controllers.UsersGuide"
        ],
        "page_id": "repo:modelica-gateway-retrieval:projection:reference:module:repo:modelica-gateway-retrieval:module:Projectionica.Controllers.UsersGuide",
        "path": "Controllers/UsersGuide/Tutorial/FirstSteps.mo",
        "paths": [
          "Controllers/UsersGuide/Tutorial/FirstSteps.mo",
          "Controllers/UsersGuide/Tutorial/FirstSteps.mo#annotation.documentation",
          "Controllers/UsersGuide/package.mo"
        ],
        "repo_id": "modelica-gateway-retrieval",
        "sections": [
          {
            "body": "Projected reference page for `Projectionica.Controllers.UsersGuide`.\nFormat hints:\n- `modelica_users_guide_page`\n- `modelica_users_guide_tutorial`\n- `modelica_users_guide_tutorial_annotation`\nSource paths:\n- `Controllers/UsersGuide/Tutorial/FirstSteps.mo`\n- `Controllers/UsersGuide/Tutorial/FirstSteps.mo#annotation.documentation`\n- `Controllers/UsersGuide/package.mo`",
            "level": 1,
            "paths": [
              "Controllers/UsersGuide/Tutorial/FirstSteps.mo",
              "Controllers/UsersGuide/Tutorial/FirstSteps.mo#annotation.documentation",
              "Controllers/UsersGuide/package.mo"
            ],
            "section_id": "repo:modelica-gateway-retrieval:projection:reference:module:repo:modelica-gateway-retrieval:module:Projectionica.Controllers.UsersGuide#overview",
            "title": "Overview"
          },
          {
            "body": "Modules:\n- `Projectionica.Controllers.UsersGuide` (Controllers/UsersGuide/package.mo)",
            "level": 2,
            "paths": [
              "Controllers/UsersGuide/package.mo"
            ],
            "section_id": "repo:modelica-gateway-retrieval:projection:reference:module:repo:modelica-gateway-retrieval:module:Projectionica.Controllers.UsersGuide#anchors",
            "title": "Anchors"
          },
          {
            "body": "Documentation:\n- `FirstSteps` (Controllers/UsersGuide/Tutorial/FirstSteps.mo)\n- `FirstSteps documentation` (Controllers/UsersGuide/Tutorial/FirstSteps.mo#annotation.documentation)\n- `UsersGuide` (Controllers/UsersGuide/package.mo)",
            "level": 2,
            "paths": [
              "Controllers/UsersGuide/Tutorial/FirstSteps.mo",
              "Controllers/UsersGuide/Tutorial/FirstSteps.mo#annotation.documentation",
              "Controllers/UsersGuide/package.mo"
            ],
            "section_id": "repo:modelica-gateway-retrieval:projection:reference:module:repo:modelica-gateway-retrieval:module:Projectionica.Controllers.UsersGuide#sources",
            "title": "Documentation"
          }
        ],
        "symbol_ids": [],
        "title": "Projectionica.Controllers.UsersGuide"
      }
    }
  ],
  "repo_id": "modelica-gateway-retrieval"
}
